...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="للبحث: ادخل رقم او تاريخ الفاتورة" translatesAutoresizingMaskIntoConstraints="NO" id="8DV-ti-pl6">
                                <rect key="frame" x="0.0" y="64" width="768" height="56"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="تحديث البيانات">
                                            <attributes>
                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="بدء وقت العمل">
                                            <attributes>
                                                <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="إنهاء وقت العمل">
                                            <attributes>
                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="لاحقاً">
                                            <attributes>
                                                <color key="NSColor" red="0.28627450980392155" green="0.53725490196078429" blue="0.6470588235294118" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="التقارير" image="reports" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="hours" destination="9SN-Us-5im" id="MTG-Mv-XdP"/>
...
                                        <connections>
                                            <outlet property="img" destination="7pF-hB-9rV" id="NyT-oS-SJk"/>
                                            <outlet property="inventory" destination="kJ0-Td-OCt" id="zGK-co-hgz"/>
                                            <outlet property="name" destination="u9r-4t-hrI" id="XML-aU-nFb"/>
                                        </connections>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U9v-Ax-g3A">
                                <rect key="frame" x="247" y="514" width="275" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ogq-w1-KB4">
                                <rect key="frame" x="247" y="570" width="275" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="تسجيل الدخول">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DUN-OO-pOg" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="الفواتير" image="third" id="YWO-9c-JFA"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UiP-5g-0xj">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xYh-Ji-v1D" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="الملف الشخصي" image="first" id="acW-dT-cKf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DKX-in-JKb">
...
