...
                    let key = self.ref.child(userID)
                    let post = ["picPATH":self.picURL,
                                "picName":self.picName] as [String : Any]
                    key.updateChildValues(post)
                }
            }
        var myalert = UIAlertController(title: "تم التعديل بنجاح" ,
                                        message : "تم تعديل معلوماتك الشخصية بنجاح",
                                        preferredStyle: .alert)
            let defaultAction = UIAlertAction(title: "حسناً", style: .default) { (action:UIAlertAction!) in
                
                // Code in this block will trigger when OK button tapped.
                startedAlready = false
...
