...
import UIKit

class AccountingViewController: UIViewController , UITableViewDelegate , UITableViewDataSource {

    @IBOutlet weak var menuTable: UITableView!
    
    var sl : [String] = ["قائمة المنتجات" , "عربات التسوق"]
    override func viewDidLoad() {
        super.viewDidLoad()
        menuTable.delegate = self
        menuTable.dataSource = self
      //  self.menuTable.register(UITableViewCell.self, forCellReuseIdentifier: "menuCell")

...
