...
        formatter.dateFormat = "yyyy-MM-dd"
        let todaysDate = String(formatter.string(from: date))
        formatter.dateFormat = "HH:mm"
        let currentTime = String(formatter.string(from: date))
        let alertController = UIAlertController(title: "استرجاع منتج", message: "هل تود إتمام عملية الإسترجاع", preferredStyle: UIAlertControllerStyle.alert)
        //Create ok button
        let OKAction = UIAlertAction(title: "نعم", style: .default) { (action:UIAlertAction!) in
            // Code in this block will trigger when OK button tapped.
            // delete old receipt
         /*   self.ref.child("receipts").observe(DataEventType.value , with: {(snapshot)
                in
                if snapshot.exists(){
                    for receipt in snapshot.children.allObjects as! [DataSnapshot] {
...
