...
class ResetPasswordViewController: UIViewController {
    
    @IBOutlet weak var emailField: UITextField!
    
    @IBAction func resetPasswordButton(_ sender: UIButton) {
        if self.emailField.text == "" {//
            let alertController = UIAlertController(title: "خطأ", message: "الرجاء كتابة البريد الإلكتروني", preferredStyle: .alert)
            
            let defaultAction = UIAlertAction(title: "حسنا", style: .cancel, handler: nil)
            alertController.addAction(defaultAction)
            
            present(alertController, animated: true, completion: nil)
            
...
